[package]
name = "cc99"
version = "0.2.0"
authors = ["TO/GA", "RalXYZ", "Raynor"]
edition = "2021"
description = "A C-like language compiler"
readme = "README.md"
repository = "https://github.com/RalXYZ/cc99"
license = "GPL-3.0"


[lib]
name = "cc99"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = ["local"]
local = ["clap","inkwell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.2"
serde_json = "1.0.59"
clap = { version = "3.1.8", features = ["derive"], optional = true }
inkwell = { version="0.1.0-beta.4" , features = ["llvm13-0"], optional = true}
anyhow = "1.0"
thiserror = "1.0"
typed-arena = "2.0.1"
escape_string = "0.1.2"
codespan-reporting = "0.11.1"
